# embeded-lib

./: LICENSE
1. library/1. rtos wdg/lwwdg-1.1.2/: CHANGELOG.md  CMakeLists.txt
1. library/1. rtos wdg/lwwdg-1.1.2/lwwdg/: library.cmake
1. library/2. button/: README.md
1. library/2. button/lwkey/: CMakeLists.txt  lwkey.c  lwkey.h  lwkey_conf.h  lwkey_conf_template.h
1. library/2. button/lwkey/example/: lwkey_example.c
1. library/2. button/lwkey/test/: lwkey_conf.h  lwkey_test.c
1. library/4. scheduler & timer/lwop/: CMakeLists.txt  README.md  operation_test_fifo.c  operation_test_rtos.c
1. library/4. scheduler & timer/multi task/: CMakeLists.txt  multi_task.c  multi_task.h  multi_task_testing.c
4. peripheral drivers/device/rfid/NFC Reader Library for CLRC663/ComplianceApp/Nfcrdlib_EMVCo_LoopBackComplApp/: CMakeLists.txt  Nfcrdlib_EMVCo_LoopBackComplApp.c
4. peripheral drivers/device/rfid/NFC Reader Library for CLRC663/ComplianceApp/Nfcrdlib_EMVCo_LoopBackComplApp/intfs/: Nfcrdlib_EMVCo_LoopBackComplApp.h  ph_NxpBuild_App.h
4. peripheral drivers/device/rfid/NFC Reader Library for CLRC663/ComplianceApp/Nfcrdlib_EMVCo_LoopBackComplApp/mcux/: .cproject
4. peripheral drivers/device/rfid/NFC Reader Library for CLRC663/ComplianceApp/Nfcrdlib_EMVCo_LoopBackComplApp/src/: phApp_Init.c  phApp_PN5180_Init.c  phApp_PN5190_Init.c  phApp_PN76XX_Init.c
4. peripheral drivers/device/rfid/NFC Reader Library for CLRC663/NxpNfcRdLib/comps/phalMfdfEVx/: CMakeLists.txt
4. peripheral drivers/device/rfid/NFC Reader Library for CLRC663/NxpNfcRdLib/comps/phalMfp/: CMakeLists.txt
4. peripheral drivers/device/rfid/NFC Reader Library for CLRC663/Platform/DAL/: CMakeLists.txt
4. peripheral drivers/device/rfid/NFC Reader Library for CLRC663/Platform/DAL/boards/: Board_FRDM_K82FRc663.h  Board_Lpc1769Rc663.h  Board_PiRc663.h
4. peripheral drivers/device/rfid/example/nxp_NfcReaderLib_port_To_stm32h7/: CMakeLists.txt  二代身份证ID读取.md
4. peripheral drivers/device/rfid/example/nxp_NfcReaderLib_port_To_stm32h7/App/: CMakeLists.txt
4. peripheral drivers/device/rfid/example/nxp_NfcReaderLib_port_To_stm32h7/App/inc/: phApp_Demo.h  ph_NxpBuild_App.h
4. peripheral drivers/device/rfid/example/nxp_NfcReaderLib_port_To_stm32h7/App/src/: phApp_Demo.c  phApp_DiscoveryLoop.c  phApp_Init.c  phApp_RC663_Init.c  phApp_ReadUID.c
4. peripheral drivers/drivers/2. NET & Wireless/7. RFID/NFC Reader Library for CLRC663/: CMakeLists.txt
4. peripheral drivers/drivers/2. NET & Wireless/7. RFID/NFC Reader Library for CLRC663/ComplianceApp/: CMakeLists.txt  _FRDMK82_DTA_cproject  _PN74xxxx_DTA_cproject
4. peripheral drivers/drivers/2. NET & Wireless/7. RFID/NFC Reader Library for CLRC663/ComplianceApp/Nfcrdlib_EMVCo_AnalogComplApp/: CMakeLists.txt  Nfcrdlib_EMVCo_AnalogComplApp.c  Readme.txt
4. peripheral drivers/drivers/2. NET & Wireless/7. RFID/NFC Reader Library for CLRC663/ComplianceApp/Nfcrdlib_EMVCo_InteropComplApp/: CMakeLists.txt  Nfcrdlib_EMVCo_InteropComplApp.c
4. peripheral drivers/drivers/2. NET & Wireless/7. RFID/NFC Reader Library for CLRC663/ComplianceApp/Nfcrdlib_EMVCo_LoopBackComplApp/: Readme.txt
4. peripheral drivers/drivers/2. NET & Wireless/7. RFID/NFC Reader Library for CLRC663/ComplianceApp/Nfcrdlib_ISO10373_6_PCD_ComplApp/: Nfcrdlib_ISO10373_6_PCD_ComplApp.c
4. peripheral drivers/drivers/2. NET & Wireless/7. RFID/NFC Reader Library for CLRC663/ComplianceApp/Nfcrdlib_ISO10373_6_PICC_ComplApp/: Readme.txt
4. peripheral drivers/drivers/2. NET & Wireless/7. RFID/NFC Reader Library for CLRC663/ComplianceApp/Nfcrdlib_NFC_Forum_DTA_ComplApp/: Readme.txt
4. peripheral drivers/drivers/2. NET & Wireless/7. RFID/NFC Reader Library for CLRC663/Examples/: CMakeLists.txt  switch_mcuproject.sh
4. peripheral drivers/drivers/2. NET & Wireless/7. RFID/NFC Reader Library for CLRC663/Examples/NfcrdlibEx1_DiscoveryLoop/: CMakeLists.txt  Readme.txt
4. peripheral drivers/drivers/2. NET & Wireless/7. RFID/NFC Reader Library for CLRC663/Examples/NfcrdlibEx3_NFCForum/: CMakeLists.txt  NfcrdlibEx3_NFCForum.c  Readme.txt
4. peripheral drivers/drivers/2. NET & Wireless/7. RFID/NFC Reader Library for CLRC663/Examples/NfcrdlibEx4_MIFAREClassic/: NfcrdlibEx4_MIFAREClassic.c
4. peripheral drivers/drivers/2. NET & Wireless/7. RFID/NFC Reader Library for CLRC663/Examples/NfcrdlibEx5_ISO15693/: CMakeLists.txt  NfcrdlibEx5_ISO15693.c  Readme.txt
4. peripheral drivers/drivers/2. NET & Wireless/7. RFID/NFC Reader Library for CLRC663/Examples/NfcrdlibEx8_HCE_T4T/: CMakeLists.txt
4. peripheral drivers/drivers/2. NET & Wireless/7. RFID/NFC Reader Library for CLRC663/Examples/NfcrdlibEx9_NTagI2C/: NfcrdlibEx9_NTagI2C.c  Readme.txt
4. peripheral drivers/drivers/2. NET & Wireless/7. RFID/NFC Reader Library for CLRC663/Examples/NfcrdlibTst12_Rc663Lpcd/: Readme.txt
4. peripheral drivers/drivers/2. NET & Wireless/7. RFID/NFC Reader Library for CLRC663/Examples/Nfcrdlib_SimplifiedAPI_ISO/: CMakeLists.txt  Nfcrdlib_SimplifiedApi_ISO.c
4. peripheral drivers/drivers/2. NET & Wireless/7. RFID/NFC Reader Library for CLRC663/NxpNfcRdLib/comps/: CMakeLists.txt
4. peripheral drivers/drivers/2. NET & Wireless/7. RFID/NFC Reader Library for CLRC663/NxpNfcRdLib/intfs/: NxpNfcRdLib_Ver.h  phCidManager.h  phNfcLib.h  phNxpNfcRdLib_Config.h  phTMIUtils.h  phalFelica.h  phalMfNtag42XDna.h  phalMfc.h  phalMfdfEVx.h  phalMfdfLight.h  phalMfpEVx.h  phalTop.h  phceT4T.h  phhalHw.h  phhalHw_Pn5180_Instr.h  phhalHw_Rc663_Cmd.h  phhalHw_Rc663_Reg.h  phpalI14443p3b.h  phpalI14443p4.h  phpalI18092mPI.h
4. peripheral drivers/drivers/2. NET & Wireless/7. RFID/NFC Reader Library for CLRC663/NxpNfcRdLib/types/: ph_NxpBuild.h  ph_RefDefs.h  ph_Status.h  ph_TypeDefs.h
4. peripheral drivers/drivers/2. NET & Wireless/7. RFID/NFC Reader Library for CLRC663/RTOS/FreeRTOS/: phFreeRTOSConfig.c
4. peripheral drivers/drivers/2. NET & Wireless/7. RFID/NFC Reader Library for CLRC663/RTOS/phOsal/: .project  CMakeLists.txt
5. utils/5.0 build system/config file/cmake/cortex_m4 with armclang/: CMakeLists.txt
(+3128 files in other folders)
