
ADD_SUBDIRECTORY(NfcrdlibEx1_DiscoveryLoop)
IF(NOT FRONTEND_RC663)
    ADD_SUBDIRECTORY(NfcrdlibEx3_NFCForum)
ENDIF()
ADD_SUBDIRECTORY(NfcrdlibEx4_MIFAREClassic)
ADD_SUBDIRECTORY(NfcrdlibEx5_ISO15693)
ADD_SUBDIRECTORY(NfcrdlibEx6_LPCD)
IF(NOT FRONTEND_RC663)
    ADD_SUBDIRECTORY(NfcrdlibEx8_HCE_T4T)
ENDIF()
ADD_SUBDIRECTORY(NfcrdlibEx9_NTagI2C)
IF(WITH_NDA)
    ADD_SUBDIRECTORY(NfcrdlibEx7_MIFAREPlus)
    ADD_SUBDIRECTORY(NfcrdlibEx10_MIFAREDESFire_EVx)
ENDIF()
ADD_SUBDIRECTORY(Nfcrdlib_SimplifiedAPI_ISO)
IF(WITH_ECP)
    ADD_SUBDIRECTORY(NfcrdlibEx2_ECP)
ENDIF()